--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.3",
-    "openai": "^4.26.0"
+    "openai": "^4.26.0",
+    "pg": "^8.11.3",
+    "sequelize": "^6.37.0"
   }
 }
