--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.3",
-    "openai": "^4.26.0",
-    "pg": "^8.11.3",
-    "sequelize": "^6.37.0"
+    "openai": "^4.26.0"
   }
 }
