--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-lottie": "^1.2.4",
     "react-router-dom": "^6.4.2",
     "react-spinners": "^0.13.8"
