--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.3",
-    "openai": "^4.26.0"
+    "openai": "^4.26.0",
+    "replicate": "^0.28.1"
   }
 }
