--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 frontend/node_modules
 backend/node_modules
 
+frontend/.env
 backend/.env
+
+frontend/package-lock.json
+backend/package-lock.json
+
+frontend/dist
+backend/resources
+backend/uploads
