--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3",
-    "openai": "^4.26.0",
-    "replicate": "^0.28.1"
+    "openai": "^4.57.3",
+    "replicate": "^0.32.1"
   }
 }
