--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "StarBrush",
+  "name": "frontend",
   "private": true,
-  "version": "2.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -12,15 +12,13 @@
     "@heroicons/react": "^2.0.12",
     "@material-tailwind/react": "^1.4.2",
     "@microsoft/fetch-event-source": "^2.0.1",
-    "antd": "^5.5.0",
     "axios": "^1.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-lottie": "^1.2.4",
-    "react-router-dom": "^6.4.2",
-    "react-spinners": "^0.13.8"
+    "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
